* Wed 24 Jun 2009 Caius 'kaio' Chance <me AT kaio.me>
- Tidy up repository.
- Modify Makefile to generate only SFDs as source release.
- Updated documents.

* Mon 12 Jan 2009 Caius Chance <cchance@redhat.com>
- Fixed copyright holder name typo for Sans Regular font (rhbz#479521).

* Tue 09 Dec 2008 Caius Chance <cchance@redhat.com>
- Changed cent sign glyph (U+00A2) to be coressed in Sans and Mono
  (rhbz#474522).

* Wed 03 Dec 2008 Caius Chance <cchance@redhat.com>
- Started 1.04.93.devel.
- Fixed blurriness of U+03BC for Sans Regular font (rhbz#473481).
- Fixed src tarball mis-inclusion of dist files in Makefile.

* Fri 28 Nov 2008 Caius Chance <cchance@redhat.com>
- Corrected version number in Makefile.
- Fixed make target of source tarball.
- Uploaded 1.04.92 source tarball to release area.

* Wed 15 Oct 2008 Caius Chance <cchance@redhat.com>
- Fixed blurred 'u' and 'W' for Sans Bold font (rhbz#463036).
- Released as version 1.04.92

* Wed 17 Sep 2008 Caius Chance <cchance@redhat.com>
- Fixed missing hinting instructions for all Mono fonts (rhbz#460090).
- Fixed missing hinting instructions for all Sans fonts (rhbz#460090).
- Fixed missing hinting instructions for all Serif fonts (rhbz#460090).
- Released as version 1.04.91

* Tue 09 Sep 2008 Caius Chance <cchance@redhat.com>
- Backed up all released files in ./dist directory.

* Fri 05 Sep 2008 Caius Chance <cchance@redhat.com>
- Fixed incorrect glyph points and missing hinting instructions for:
  Mono Bold Italic (up to U+2012) (rhbz#460090).

* Mon 25 Aug 2008 Caius Chance <cchance@redhat.com>
- Fixed incorrect glyph points and missing hinting instructions for:
  U+0079, U+03BC, U+0431, U+2010..2012, U+1114117 (rhbz#458592).
- Released as version 1.04.90.

* Thu 13 Jul 2008 Caius Chance <cchance@redhat.com>
- Released as version 1.04.

* Thu 12 Jun 2008 Caius Chance <cchance@redhat.com>
- Released as version 1.04.beta2 (1.03.99).
- Added ZIP package building for non-tar users.
- rhbz#440992: